# advent-of-code-2023

./: .gitignore  README.md  justfile  pyproject.toml
days/day1/: day1.py
days/day2/: day2.py
days/day3/: day3.py
